--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -78,12 +78,23 @@
     - base_debian
 
 # hostname
-- name: hostname
+- name: hostname (debian)
   hostname:
     name: '{{ base_hostname }}'
-    #use: debian
+    use: debian
   when: base_debian_enabled
         and ansible_os_family | string in base_debian_os_family_supported
+        and ansible_service_mgr != 'systemd'
+  tags:
+    - base_debian
+
+- name: hostname (systemd)
+  hostname:
+    name: '{{ base_hostname }}'
+    use: systemd
+  when: base_debian_enabled
+        and ansible_os_family | string in base_debian_os_family_supported
+        and ansible_service_mgr == 'systemd'
   tags:
     - base_debian
 
